Fix overflow of code blocks.

--- a/app/assets/stylesheets/articles.sass
+++ b/app/assets/stylesheets/articles.sass
@@ -26,6 +26,8 @@ body.articles
 
   .highlight
     pre
+      overflow: scroll
+      color: #fff 
       font:
         size: 0.9em
         family: "SourceCodePro"
